# Evabot

./: .gitignore  DEPENDENCIES.md  Evabot.repos  IMPLEMENTATION.md  JETSON_DEPLOYMENT.md  README.md  check_setup.sh  configure_gateway.sh  setup.sh  start_can_gateway.sh  test_simple_gateway.sh
scripts/: robot.sh  setup.sh
src/evabot_bringup/: CMakeLists.txt  README.md  package.xml
src/evabot_bringup/launch/: can_system.launch.py
web_interface/: README.md
web_interface/frontend/: app.js  index.html  manifest.json  service-worker.js  styles.css
web_interface/server/: go.mod  web_server.go
